[NEW] uws set locale
* Font setup for:
  - virtual console
  - foot
* `util/font/update` to update 'res/font':
  - terminus (PSF)
  - input (TTF)
* Fonts without updater:
  - SauceCodePro (TTF)
  - ZAP (PSF)

Default console font:
https://www.zap.org.au/projects/console-fonts-zap

--- a/playbook/locale/keymap/console.yml
+++ b/playbook/locale/keymap/console.yml
@@ -66,6 +66,7 @@
           )
         }}
 
+  # TODO: Make a plugin for these 3 tasks {{{
   - name: /?/ KEYMAP config count
     shell:
       cmd: "grep '^\\s*KEYMAP=' '{{ config.file }}' | wc -l"
@@ -89,6 +90,7 @@
       validate: "'{{ uws }}/util/validate/gc.sh' '%s' '^\\s*KEYMAP=' 1"
     become: true
     notify: Reload console config
+    # }}}
 
   handlers:
 
