--- a/lib/ansible_collections/local/uws/roles/locale/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/roles/locale/tasks/main.yml
@@ -1,4 +1,6 @@
 - import_tasks: "locale/install.yml"
 - import_tasks: "locale/default.yml"
 - import_tasks: "font/psf.yml"
+
 - import_tasks: "font/ttf.yml"
+  when: settings.desktop.de
