[UPD] set uws roles/niri
Configures the Niri:
* Keyboard layout
* Main monitor scale
* Brightness hotkeys
* Volume hotkeys
* Window switch on Alt+Tab
* Window styling
* FIX: Mod+R spawns Rofi coorectly

--- a/lib/ansible_collections/local/uws/roles/locale/tasks/keymap/desktop.yml
+++ b/lib/ansible_collections/local/uws/roles/locale/tasks/keymap/desktop.yml
@@ -1,3 +1,6 @@
+# Set vars to be used by another roles for keyboard setup.
+
+
 - set_fact:
     # The `keyboard.layouts.list`. Or generate list using the `locale.list`:
     #   * take '<xx>_<YY>' or '<xx>_<YY>.<CP>'
